# diffusion-artifact

./: LICENSE  README.md  kick-the-tires.sh  run-all.sh
diffusion-benchmarking/: CMakeLists.txt  CMakePresets.json  README.md
diffusion-benchmarking/benchmarking/: benchmark.py  benchmarking-fast.json  benchmarking-uniform-pb.json  benchmarking-uniform.json  compute_cores_division.py
diffusion-benchmarking/example-problems/: 300x300x300x100.json  50x50x50x1.json  50x50x50x8.json  80x80x80x16.json  debug.json  params.json  toy-big.json  toy-small.json
diffusion-benchmarking/example-problems/liver/: 10%_liver.json  100%_liver.json  20%_liver.json  30%_liver.json  40%_liver.json  50%_liver.json  60%_liver.json  70%_liver.json  80%_liver.json  90%_liver.json  liver.txt
diffusion-benchmarking/example-problems/petri_dish/: cell_culture.json  large_cultures.json  large_scale.json  microbial_culture.json  microscope.json  petri_dish.txt
diffusion-benchmarking/scripts/: benchmark.sh  build-gpp.sh  build-hbm.sh  profile.sh  run_gpp_all.sh  run_gpp_all_uniform.sh  run_hbm_all.sh  run_hbm_all_uniform.sh  run_mn_gpp.sh  run_mn_hbm.sh  slurm_helper.sh  test.sh
diffusion-benchmarking/src/: algorithms.cpp  algorithms.h  barrier.h  base_solver.h  biofvm.cpp  biofvm.h  blocked_thomas_solver.cpp  blocked_thomas_solver.h  blocked_thomas_solver_t.cpp  blocked_thomas_solver_t.h  co_thomas_solver.cpp  co_thomas_solver.h  cubed_mix_thomas_solver_t.cpp  cubed_mix_thomas_solver_t.h  cubed_thomas_solver_t.cpp  cubed_thomas_solver_t.h  cyclic_reduction_solver.cpp  cyclic_reduction_solver.h  cyclic_reduction_solver_t.cpp  cyclic_reduction_solver_t.h  diffusion_solver.h  full_lapack_solver.cpp  full_lapack_solver.h  general_lapack_thomas_solver.cpp  general_lapack_thomas_solver.h  lapack_thomas_solver.cpp  lapack_thomas_solver.h  least_compute_thomas_solver.cpp  least_compute_thomas_solver.h  least_compute_thomas_solver_m.cpp  least_compute_thomas_solver_m.h  least_compute_thomas_solver_s.cpp  least_compute_thomas_solver_s.h  least_compute_thomas_solver_s_t.cpp  least_compute_thomas_solver_s_t.h  least_compute_thomas_solver_ss.cpp  least_compute_thomas_solver_ss.h  least_compute_thomas_solver_t.cpp  least_compute_thomas_solver_t.h  least_memory_thomas_solver.cpp  (+22 more)
diffusion-benchmarking/src/space-dependent-diffusion/: full_blocking.cpp  full_blocking.h  full_blocking_x.h  least_compute_thomas_solver_t.cpp  least_compute_thomas_solver_t.h  least_memory_thomas_solver_t.cpp  least_memory_thomas_solver_t.h  partial_blocking.cpp  partial_blocking.h  reference_thomas_solver.cpp  reference_thomas_solver.h
plots/: plot-fast.R  plot.R
presented-results/: plot.R
presented-results/gpp/: baselines.csv  biofvms.csv  full-blocking-alt-dist.csv  full-blocking-alt.csv  full-blocking-dist.csv  full-blocking.csv  partial-blocking.csv  temporals.csv  transpose-temporal.csv
presented-results/hbm/: baselines.csv  biofvms.csv  full-blocking-alt-dist.csv  full-blocking-alt.csv  full-blocking-dist.csv  full-blocking.csv  partial-blocking.csv  temporals.csv  transpose-temporal.csv
